4.6.2 fix songdetails_controls loop icon spacing

--- a/app/player/player.css
+++ b/app/player/player.css
@@ -4,6 +4,7 @@
     display: block;
 }
 .icon-wrap {
-    margin: 4px 2px;
+    margin-left: 2px;
+    margin-right: 2px;
     float: left;
 }
